# jiki

./: .gitignore  .readthedocs.yaml  README.md  TODO.md  main.py  mkdocs.yml  plan.md  pyproject.toml  tools.json
docs/: architecture_overview.md  cli_reference.md  code_examples.md  core_interfaces.md  getting_started.md  index.md  logging.md  mcp_client.md  orchestrator_interfaces.md  reference.md  requirements.txt
docs/diagrams/: README.md  architecture_overview.md
examples/: advanced_examples.py  custom_transport_example.py  detailed_and_roots_example.py  simple_multiturn_cli.py
jiki/: __init__.py  cli.py  logging.py  mcp_client.py  orchestrator.py  orchestrator_helpers.py  sampling.py  tool_client.py  utils.py
jiki/models/: __init__.py  litellm.py  response.py  state.py  verl_compat.py
jiki/prompts/: __init__.py  prompt_builder.py  utils.py
jiki/resources/: __init__.py  resource_manager.py
jiki/roots/: __init__.py  conversation_root_manager.py  root_manager.py
jiki/serialization/: __init__.py  helpers.py
jiki/tools/: __init__.py  config.py  tool.py
jiki/transports/: factory.py
jiki/utils/: cleaning.py  context.py  helpers.py  logging.py  parsing.py  prompt.py  streaming.py  token.py  tool.py
servers/: calculator_server.py  custom_tools_server.py
tests/: TEST_PLAN.md  __init__.py  conftest.py  test_imports.py  test_orchestrator.py  test_utils.py
